--- a/Razer-Synapse-Service-Process.csproj
+++ b/Razer-Synapse-Service-Process.csproj
@@ -22,11 +22,7 @@
   <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
     <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
-  <ItemGroup>
-    <PackageReference Include="Microsoft.AspNet.SignalR.Client" Version="2.2.1" />
-    <PackageReference Include="protobuf-net" Version="2.0.0.480" />
-    <PackageReference Include="WebApiContrib.Formatting.ProtoBuf" Version="0.9.5" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Reference Include="Contract.Common">
       <HintPath>$(RazerServicePath)\Bin\Contract.Common.dll</HintPath>
@@ -35,6 +31,9 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="Contract.Audio.ApplicationStreams">
       <HintPath>$(RazerServicePath)\Bin\Contract.Audio.ApplicationStreams.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.AspNet.SignalR.Client">
+      <HintPath>$(RazerUserProcessPath)\Microsoft.AspNet.SignalR.Client.dll</HintPath>
     </Reference>
     <Reference Include="Synapse3.UserInteractive.DeviceDetection">
       <HintPath>$(RazerUserProcessPath)\Synapse3.UserInteractive.DeviceDetection.dll</HintPath>
@@ -63,10 +62,19 @@
     <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="System.Management" />
     <Reference Include="System.ServiceProcess" />
+    <Reference Include="WebApiContrib.Formatting.ProtoBuf">
+      <HintPath>$(RazerUserProcessPath)\WebApiContrib.Formatting.ProtoBuf.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Net.Http.Formatting">
+      <HintPath>$(RazerUserProcessPath)\System.Net.Http.Formatting.dll</HintPath>
+    </Reference>
     <Reference Include="Common.Internal">
       <HintPath>$(RazerServicePath)\Bin\Common.Internal.dll</HintPath>
     </Reference>
     <Reference Include="System.Core" />
+    <Reference Include="protobuf-net">
+      <HintPath>$(RazerUserProcessPath)\protobuf-net.dll</HintPath>
+    </Reference>
     <Reference Include="System.Configuration" />
     <Reference Include="Synapse3.Macros.Common.Utilities">
       <HintPath>$(RazerServicePath)\Lib\Macros.Common.Utilities\Synapse3.Macros.Common.Utilities.dll</HintPath>
